Fix image modal scrolling on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -481,6 +481,7 @@ iframe.playlist-item {
 .unconstrained-modal-content {
   width: auto;
   max-width: 80vw;
+  max-height: 95vh;
 }
 
 // Image hero
